# etos-jda-connector

helm/: values.yml
helm/kaas-nonprd/: values.yml
helm/kaas-prd/: values.yml
service/: default.env  pyproject.toml
service/app/: glogger.py  main.py  settings.py  utils_oracle.py
service/app/api/: main.py
service/app/jobs/: job.py  job_get_stores.py  main.py
